# shogi-cpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
src/: Board.cpp  Board.h  CMakeLists.txt  MiniShogiBoard.cpp  MiniShogiBoard.h  Move.cpp  Move.h  ShogiBoard.cpp  ShogiBoard.h  Square.cpp  Square.h  shogi.h
tests/: BoardTest.cpp  CMakeLists.txt  MiniShogiBoardTest.cpp  MoveTest.cpp  ShogiBoardTest.cpp  SquareTest.cpp  main.cpp
